# SPIMquant

./: .gitignore  .gitmodules  .readthedocs.yaml  MIP_rot3d.ipynb  README.md  check_threads.py  cmd.sh  commands_registration.txt  mkdocs.yml  plot_thin.py  profile_to_mov.py  pyproject.toml  stardist.ipynb
.github/: copilot-instructions.md
.github/workflows/: test.yml  wetrun-testing.yml
docs/: DAG_SUMMARY.md  changelog.md  conf.py  contributing.md  faq.md  hooks.py  index.md  requirements.txt  workflow_overview.md  workflow_visualization.md
docs/examples/: datasets.md  notebooks.md  workflows.md
docs/figures/: README.md  dag_01_import.mermaid  dag_02_preprocessing.mermaid  dag_03_masking.mermaid  dag_04_correction.mermaid  dag_05_registration.mermaid  dag_06_transform.mermaid  dag_07_segmentation.mermaid  dag_08_quantification.mermaid  dag_09_statistics.mermaid  dag_10_qc.mermaid  dag_11_patches.mermaid  rulegraph_full.mermaid
docs/getting_started/: hardware.md  installation.md  quickstart.md
docs/howto/: cloud_data.md  imaris_crops.md  mri_registration.md  ome_zarr.md  segmentation.md  visualization.md
docs/reference/: api.md  cli_reference.md  config.md  outputs.md  rules.md  workflow_overview.md
docs/scripts/: README.md  gen_cli_docs.py  generate_dag_diagrams.py  render_diagrams.py
docs/tutorials/: advanced_workflows.md  atlas_quantification.md  basic_registration.md  custom_templates.md
docs/usage/: app_cli.md  cli.md  cloud.md  configuration.md  group_analysis.md  outputs.md  snakemake_cli.md  templates.md  troubleshooting.md  workflow.md  workflows.md
docs/workflows/: common.md  groupstats.md  import.md  index.md  masking.md  patches.md  preproc_mri.md  segmentation.md  templatereg.md
example_notebooks/: MIP.ipynb  example_zarr_process.ipynb  labels_desc-binary_dseg.tsv  otsu.ipynb  quantify_BetaAmyloid.ipynb  stardist.ipynb  vis_cellpose.ipynb
examples/notebooks/: MIP_coiled.ipynb  MIP_rot3d.ipynb  README.md  coiled_sandbox.ipynb  colocalization_visualization.ipynb  hist_summary.ipynb  otsu.ipynb  stardist.ipynb  vis_blob_detection.ipynb
spimquant/: WIP_xfm_hires.ipynb  analyze_appmaptapoe.ipynb  pipeline_description.json  run.py
spimquant/config/: snakebids.yml
spimquant/config/.ipynb_checkpoints/: snakebids-checkpoint.yml
spimquant/cvpl_tools/: array_key_dict.py  dataset_reference.py  fs.py  persistence.py  reader_from_cmd.py  strenc.py
spimquant/profiles/default/: config.yaml
spimquant/resources/ABAv3/eed_labels/: P56_annotation_22_R_L.csv  P56_annotation_82_R_L.csv
spimquant/resources/ABAv3/ngo_labels/: atlas_labels.csv  atlas_with_names.csv
spimquant/resources/MBMv3/: atlas_MBM_cortex_vPaxinos.itksnap.txt  atlas_MBM_cortex_vPaxinos.txt
spimquant/resources/Turone_Mouse_Brain_Template/: LICENSE.txt
spimquant/resources/Turone_Mouse_Brain_Template/Turone_Mouse_Brain_Atlas/: TMBTA_ItK_Label_File.txt
spimquant/resources/gubra/: README.md  gubra_withspacing_to_aba_rigid_itk.txt  remap_labels.py
spimquant/resources/tpl-ABAv3/: tpl-ABAv3_seg-all_dseg.tsv  tpl-ABAv3_seg-allsym_dseg.tsv  tpl-ABAv3_seg-coarse_dseg.tsv  tpl-ABAv3_seg-fine_dseg.tsv  tpl-ABAv3_seg-mid_dseg.tsv  tpl-ABAv3_seg-roi198_dseg.tsv  tpl-ABAv3_seg-roi22_dseg.tsv  tpl-ABAv3_seg-roi82_dseg.tsv
spimquant/resources/tpl-MBMv3/: tpl-MBMv3_seg-paxinos_dseg.tsv
spimquant/resources/tpl-MouseIn/: template_description.json
spimquant/resources/tpl-turone/: README.txt  tpl-turone_seg-all_dseg.tsv
spimquant/test_out/config/: snakebids.yml
spimquant/wip_mouse/: analyze_appmaptapoe.ipynb  participants.tsv
spimquant/workflow/: Snakefile
spimquant/workflow/envs/: ants.yaml  c3d.yaml  greedy.yaml  nilearn.yaml  stardist.yaml  vesselfm.yaml
spimquant/workflow/lib/: cloud_io.py  ome_zarr.py  utils.py
spimquant/workflow/notebooks/: deform_to_template_nii.py.ipynb  registration_qc.py.ipynb
spimquant/workflow/rules/: atlasreg.smk  blobdetect.smk  celldetect.smk  cellsegment.smk  common.smk  counts.smk  fieldfrac.smk  group_negative_mask.smk  groupstats.smk  gubra_atlas.smk  heatmaps.smk  import.smk  masking.smk  patches.smk  preproc_mri.smk  preproc_spim.smk  qc.smk  rechunk.smk  regionprops.smk  segmentation.smk  segstats.smk  sidecars.smk  stardist.smk  templatereg.smk  vesselfm.smk  vessels.smk  viatemplatereg.smk
spimquant/workflow/scripts/: affine_to_template_nii.py  affine_to_template_ome_zarr.py  affine_transform_channel_to_template_nii.py  aggregate_histograms.py  aggregate_regionprops_across_stains.py  aggregate_regionprops_across_subjects.py  annotate_vessel_graph_connected_components.py  antspyx_n4.py  atropos_seg.py  average_registered_mri.py  blob_detection.py  blob_detection_coiled.py  calc_n4_rescaling.py  calc_otsu_thresholds.py  cellpose.py  cellseg3d_napari_pair_overlay.py  clean_segmentation.py  coiled_fieldfrac.py  coiled_mask_to_fieldfrac.py  coiled_n4.py  coiled_n4_otsu.py  coiled_otsu.py  coloc_per_voxel_template.py  compute_centroids.py  compute_colocalization.py  compute_colocalization_with_mask.py  compute_filtered_regionprops.py  compute_spim_histogram.py  compute_subject_histogram.py  concat_subj_parquet.py  concat_subj_parquet_contrast.py  concat_subj_segstats.py  concat_subj_segstats_contrast.py  convert_vessel_graph_to_nodes_edges.py  convert_zarr_to_ozx.py  copy_nii.py  copy_or_n4.py  counts_per_voxel.py  counts_per_voxel_template.py  create_imaris_crops.py  (+77 more)
spimquant/workflow/scripts/cellsegment/: cellseg3d_napari_pair_overlay.py  (+1 more)
tests/: test_annotate_vessel_graph_connected_components.py  test_convert_vessel_graph_to_nodes_edges.py  test_group_stats_where.py  test_skeleton_graph_from_sdt.py
tests/bids_ds/: participants.tsv
tests/bids_ds_withmri/: dataset_description.json  samples.tsv
(+25 files in other folders)
