[project]
authors = [{name = "Ali R. Khan", email = "alik@robarts.ca"}]
dependencies = []
name = "SPIMquant"
requires-python = ">= 3.11"
version = "0.1.0"
scripts = { spimquant = "spimquant.run:app.run" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
snakemake = ">=9.5.1,<10"
snakebids = ">=0.14.0,<0.15"
snakemake-storage-plugin-s3 = ">=0.3.3,<0.4"
snakemake-storage-plugin-gcs = ">=1.1.4,<2"
gcsfs = ">=2025.5.1,<2026"
s3fs = ">=2025.5.1,<2026"
universal-pathlib = ">=0.2.6,<0.3"
zarr = ">=3.0.8,<4"
dask = ">=2025.5.1,<2026"
conda = ">=25.5.0,<26"
snakemake-executor-plugin-slurm = ">=1.4.0,<2"
snakemake-storage-plugin-fs = ">=1.1.2,<2"
snakemake-storage-plugin-http = ">=0.3.0,<0.4.0"
greedyreg = "==0.0.20250712"
antspyx = "==0.6.1"


[tool.pixi.pypi-dependencies]
spimquant = { path = ".", editable = true }
ngff-zarr = { version = ">=0.13.2, <0.14", extras = ["all"] }
zarrnii = ">=0.3.0a1,<0.4.0" 

[tool.pixi.tasks]
