[project]
authors = [{name = "Ali R. Khan", email = "alik@robarts.ca"}]
name = "SPIMquant"
requires-python = ">= 3.11"
version = "0.1.0"
scripts = { spimquant = "spimquant.run:app.run" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["rapidsai" ,"conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.feature.runtime.dependencies]
snakemake = ">=9.5.1,<10"
snakebids = ">=0.14.0,<0.15"
snakemake-storage-plugin-s3 = ">=0.3.3,<0.4"
snakemake-storage-plugin-gcs = ">=1.1.4,<2"
gcsfs = ">=2025.5.1,<2026"
s3fs = ">=2025.5.1,<2026"
universal-pathlib = ">=0.2.6,<0.3"
zarr = ">=3.0.8,<4"
dask = ">=2025.5.1,<2025.12.0"
conda = ">=25.5.0,<26"
snakemake-executor-plugin-slurm = ">=1.4.0,<2"
snakemake-storage-plugin-fs = ">=1.1.2,<2"
snakemake-storage-plugin-http = ">=0.3.0,<0.4.0"
greedyreg = "==0.0.20250712"
antspyx = "==0.6.1"
markdown-it-py = "<4"
docutils = "<0.22"
scipy = ">=1.11.0,<2"
matplotlib = ">=3.7.0,<4"
seaborn = ">=0.12.0,<1"
nilearn = ">=0.12.1,<0.13"
monai = ">=1.5.2,<2"
hydra-core = ">=1.3.2,<2"
scikit-image = ">=0.26.0,<0.27"
scikit-learn = ">=1.8.0,<2"
tqdm = ">=4.67.2,<5"
lightning = ">=2.6.0,<3"
wandb = ">=0.24.1,<0.25"
tensorboard = ">=2.20.0,<3"
huggingface_hub = ">=1.3.7,<2"
nibabel = ">=5.3.2,<6"
gpustat = ">=1.1.1,<2"
omegaconf = ">=2.3.0,<3"

[tool.pixi.pypi-dependencies]
spimquant = { path = ".", editable = true }
ngff-zarr = { version = ">=0.19.1", extras = ["cli","dask-image","itk","tensorstore","validate"] }
zarrnii = ">=0.16.3-alpha2-dev0,<0.16.4"
#zarrnii = { git = "https://github.com/khanlab/zarrnii", rev = "main",  editable = true }
#zarrnii = { path = "./zarrnii", editable = true }
zarrnii_plugin_api = ">=0.16.1a2-dev"
vesselfm = { git = "https://github.com/khanlab/vesselfm", rev = "main" }
h5py = ">=3.14.0"
simpleitk = ">=2.4.0"
pylibtiff = ">=0.7.0"


[tool.pixi.feature.dev.dependencies]
black   = ">=24.0.0, <25.0.0"
isort   = ">=5.10.1, <6.0.0"
snakefmt = ">=0.10.0, <0.11.0"
pytest  = "*"
jupyterlab = ">=4.4.7,<5"


[tool.pixi.feature.vis.dependencies]
napari = ">=0.6.6,<0.7"
napari-ome-zarr = ">=0.6.1,<0.7"
pyqt = ">=5.15.11,<6"
micro_sam = ">=1.6.2,<2"

[tool.pixi.environments.default]
features = ["runtime"]

[tool.pixi.environments.gpu]
features = ["runtime", "gpu"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"
dask-cuda = ">=25.12.0,<26"



[tool.pixi.environments.dev]
features = ["runtime", "dev", "vis"]


[tool.pixi.environments.dev-only]
features = ["dev"]

[tool.pixi.tasks]
quality_check = "isort --profile black spimquant/*.py -c && black spimquant --check && snakefmt spimquant --check"
quality_fix = "isort --profile black spimquant/*.py && black spimquant  && snakefmt spimquant"

[tool.pixi.dependencies]
pip = ">=25.3,<26"
